[package]
name = "yt-rss"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
bytes = "1.11.1"
cached = { version = "0.59.0", features = ["async", "tokio"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
feed-rs = "2.3.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
rss = "2.0.12"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
