[package]
name = "yt-rss"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
bytes = "1.11.1"
cached = { version = "0.59.0", features = ["async", "tokio"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
feed-rs = "2.3.1"
md5 = "0.8.0"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
rss = "2.0.12"
scraper = "0.26.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
